Fixes #33481 - fix login footer on small screens
on smaller screens,
the login footer can jump and override the login form.

--- a/webpack/assets/javascripts/react_app/components/LoginPage/LoginPage.scss
+++ b/webpack/assets/javascripts/react_app/components/LoginPage/LoginPage.scss
@@ -14,12 +14,9 @@ $background_image: linear-gradient(
 #login-page {
   height: 100%;
 
-  #login-footer-text {
-    position: fixed;
-    bottom: 0;
-    padding: 30px;
-    color: $color-pf-white;
-    font-size: 14px;
+  .login-pf-page-footer-link[href*='foreman-login-footer-text'] {
+    pointer-events: none;
+    cursor: default;
   }
 
   .login-pf {
